# 4diac.forte-esp32-sample

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  TODO  prj.conf  sysbuild.conf
boards/: esp32_ethernet_kit.conf  esp32_ethernet_kit.overlay  esp32_ethernet_kit_appcpu.overlay  esp32_ethernet_kit_procpu.overlay  teensy41.conf  teensy41.overlay
src/: main.c
sysbuild/: mcuboot.conf
